// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterButton/> should render without crashing 1`] = `
<div
  className=""
  onClick={[Function]}
>
  <span
    className="label"
  >
    color
  </span>
</div>
`;

exports[`<FilterButton/> should show selected count correctly 1`] = `
<div
  className=""
  onClick={[Function]}
>
  <span
    className="label"
  >
    color
  </span>
  <span
    className="selected-filters-count"
  >
     (
    20
    )
  </span>
</div>
`;
